src/test/deca/context/valid/cast_same_type.deca
// Description:
//   Cast redondant
//
// Resultats:
//    ok
//

{
    float a = (float) (2323.34);
    int b = (int) (5);
    boolean c = (boolean) (true);
}
