src/test/deca/context/invalid/muliple_var_decl.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    Ligne 11 : Multiple variable declaration
// 

{
   int a = 1;
   int a = 5;
}
